<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:padding="5dp"
    android:background="@drawable/background2">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:background="@color/Transpert"
        android:textColor="@color/White"
        android:theme="@style/AppTheme.headlines"
        android:text="@string/head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/main_btn"
        android:onClick="letsStart"
        android:text="@string/start"
        android:textColor="#CABBBB"
        android:textSize="25sp"
        android:theme="@style/AppTheme.Button"
        app:layout_constraintBottom_toTopOf="@+id/tutorialLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/sec_btn"
        android:onClick="aboutUsFunction"
        android:text="@string/about_us_menu"
        android:theme="@style/AppTheme.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tutorialLink"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/tutorialLink"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:background="@drawable/sec_btn"
        android:onClick="startTutorial"
        android:text="@string/tutorial_youtube_link"
        android:theme="@style/AppTheme.Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/aboutButton"
        app:layout_constraintStart_toEndOf="@+id/aboutButton"
        />

    <ImageButton
        android:id="@+id/stopMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_music_off"
        android:onClick="handleMusic"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>